<resources>
    <string name="app_name">Context Awareness</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="geofence">Geofence</string>
    <string name="logout">Logout</string>
    <string name="api_key">AIzaSyAxEIj8wZwyqvBRPOH3DoksQ9gfHYJdY2E</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_latitude">Latitude</string>
    <string name="prompt_longitude">Longitude</string>
    <string name="prompt_radius">Radius</string>

    <string name="prompt_firstname">First Name</string>
    <string name="prompt_middlename">Middle Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_id_number">ID Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_server_address">Server address</string>
    <string name="action_server_address">SServer address Url</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_view_all_safe_zones">ViewAllSafeZonesActivity</string>
    <string name="title_activity_view_all_users">ViewAllUsersActivity</string>
    <string name="title_activity_view_user">ViewUserActivity</string>
    <string name="title_activity_comments">CommentsActivity</string>

</resources>
